--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   firebase_auth: ^1.2.0
   table_calendar: ^3.0.0
   syncfusion_flutter_calendar: ^18.4.46
+  linkable: ^1.0.9
+
 
 
 
@@ -57,6 +59,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+  fonts:
+    - family: Arimo
+      fonts:
+        - asset: fonts/Arimo-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
